tenant-config/pepsi/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mcsp-app
  namespace: pepsi
  labels:
    app: mcsp-app
    tenant: pepsi
spec:
  to:
    kind: Service
    name: mcsp-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
